# ContextWeaver

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.tape  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml
docs/: demo.cast  monetization.md
examples/: quickstart.py
src/contextweaver/: __init__.py  config.py  models.py
src/contextweaver/agents/: __init__.py  archaeology_agent.py  base.py  briefing_agent.py  conflict_detector.py  mining_agent.py  orchestrator.py
src/contextweaver/api/: __init__.py  routes.py
src/contextweaver/cli/: __init__.py  main.py
src/contextweaver/integrations/: __init__.py  github_webhook.py
src/contextweaver/storage/: __init__.py  decision_graph.py  vector_store.py
tests/: test_decision_graph.py  test_mining_coinbase.py  test_models.py  test_webhook.py
