[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextweaver"
version = "0.1.0"
description = "Decision Archaeology & Living Project Intelligence - the AI agent that answers WHY"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai-agent", "decision-archaeology", "project-intelligence", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "chromadb>=0.5.0",
    "networkx>=3.4.0",
    "gitpython>=3.1.43",
    "typer[all]>=0.13.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.5.0",
    "aiofiles>=24.1.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "coverage>=7.6.0",
]

[project.scripts]
contextweaver = "contextweaver.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/contextweaver"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
